[fix] Partially apply #11 from upstream fork