@@ -42,4 +42,4 @@
 #
 OPTS="-Xms64m -Xmx256m"
 
-java $OPTS -Djava.ext.dirs=`dirname $0`/lib org.carrot2.labs.smartsprites.SmartSprites "$@"
+java $OPTS -D"java.ext.dirs=` dirname "$0" | sed 's/ /\\ /g' `/lib" org.carrot2.labs.smartsprites.SmartSprites "$@"
